--- a/webdesign.html
+++ b/webdesign.html
@@ -471,7 +471,7 @@
           <h2>Subscribe to our newsletter!</h2>
         </div>
         <div class="newsletter-from text-center">
-          <form name="NewsLetter" method="POST" data-netlify="true"> <input required="required"  type="email" name="email" id="email" placeholder="Email..."> <span class="input-group-btn"> <button class="btn btn-detault btn-light-bg" type="submit" name="submit" >Subscribe</button> </span></form>
+          <form name="NewsLetter" method="POST" data-netlify="true" data-toggle="validator"> <input required="required"  type="email" name="email" id="email" placeholder="Email..."> <span class="input-group-btn"> <button class="btn btn-detault btn-light-bg" type="submit" name="submit" >Subscribe</button> </span></form>
         </div>
       </div>
     </div>
@@ -601,7 +601,7 @@
       <div class="col-sm-12">
         <div class="section-title text-center wow zoomIn">
           <h2>hit us up</h2></div></div></div><div class="row"><div class="col-md-8 col-sm-12"><div class="contact-from">
-    <form action="" name="contactForm"  method="POST" data-netlify="true">
+    <form action="" name="contactForm"  method="POST" data-netlify="true" data-toggle="validator">
       <div class="form-group col-md-6" >
         <input type="text" name="name" class="form-control" id="name" placeholder="Enter Your Name" required="required" />
       </div>
