--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
               <input type="text" name="name" class="form-control" id="name" placeholder="Enter Your Name" required="required" />
             </div>
             <div class="form-group col-md-6">
-              <input type="email" name="email" class="form-control" id="email1" placeholder="Enter Your Email" required="required" />
+              <input type="email" name="email1" class="form-control" id="email1" placeholder="Enter Your Email" required="required" />
             </div>
             <div class="form-group col-md-12">
               <input type="text" name="subject" class="form-control" id="subject" placeholder="Enter Your Subject" />
