--- a/index.html
+++ b/index.html
@@ -489,8 +489,21 @@
       <div class="col-md-8 col-sm-12">
         <div class="contact-from">
           <form name="ContactForm" method="POST" data-netlify="true" data-toggle="validator">
-            <input type="text" name="name" class="form-control" id="name" placeholder="Enter Your Name" required="required" />
-
+            <div class="form-group col-md-6" >
+              <input type="text" name="name" class="form-control" id="name" placeholder="Enter Your Name" required="required" />
+            </div>
+            <div class="form-group col-md-6">
+              <input type="email" name="email1" class="form-control" id="email1" placeholder="Enter Your Email" required="required" />
+            </div>
+<!--            <div class="form-group col-md-12">-->
+<!--              <input type="text" name="subject" class="form-control" id="subject" placeholder="Enter Your Subject" />-->
+<!--            </div>-->
+<!--            <div class="form-group col-md-12">-->
+<!--              <textarea rows="6" name="message" class="form-control" id="message" placeholder="Enter Your Message" required="required"></textarea>-->
+<!--            </div>-->
+<!--            <div class="form-group col-md-12">-->
+<!--              <div data-netlify-recaptcha="true"></div>-->
+<!--            </div>-->
             <div class="col-md-12"><button type="submit" name="submit">send message</button></div>
           </form>
         </div>
