--- a/index.html
+++ b/index.html
@@ -495,9 +495,9 @@
             <div class="form-group col-md-6">
               <input type="email" name="email1" class="form-control" id="email1" placeholder="Enter Your Email" required="required" />
             </div>
-<!--            <div class="form-group col-md-12">-->
-<!--              <input type="text" name="subject" class="form-control" id="subject" placeholder="Enter Your Subject" />-->
-<!--            </div>-->
+            <div class="form-group col-md-12">
+              <input type="text" name="subject" class="form-control" id="subject" placeholder="Enter Your Subject" />
+            </div>
 <!--            <div class="form-group col-md-12">-->
 <!--              <textarea rows="6" name="message" class="form-control" id="message" placeholder="Enter Your Message" required="required"></textarea>-->
 <!--            </div>-->
