--- a/index.html
+++ b/index.html
@@ -498,9 +498,9 @@
             <div class="form-group col-md-12">
               <input type="text" name="subject" class="form-control" id="subject" placeholder="Enter Your Subject" />
             </div>
-<!--            <div class="form-group col-md-12">-->
-<!--              <textarea rows="6" name="message" class="form-control" id="message" placeholder="Enter Your Message" required="required"></textarea>-->
-<!--            </div>-->
+            <div class="form-group col-md-12">
+              <textarea rows="6" name="message" class="form-control" id="message" placeholder="Enter Your Message" required="required"></textarea>
+            </div>
 <!--            <div class="form-group col-md-12">-->
 <!--              <div data-netlify-recaptcha="true"></div>-->
 <!--            </div>-->
